--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,17 @@
             <artifactId>springloaded</artifactId>
             <version>1.2.7.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jquery</artifactId>
+            <version>3.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>bootstrap</artifactId>
+            <version>3.3.7</version>
+        </dependency>
+
 
     </dependencies>
 
