--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,6 @@ debug=true
 #Setting \uCC38\uACE0
 #http://docs.spring.io/spring-boot/docs/current/reference/htmlsingle/#common-application-properties
 
-debug=true
 # DataSource settings: set here configurations for the database connection
 #spring.datasource.url=jdbc:mysql://\uC8FC\uC18C
 #spring.datasource.username=\uC544\uC774\uB514
@@ -24,10 +23,10 @@ debug=true
 #spring.jpa.hibernate.naming_strategy = org.hibernate.cfg.ImprovedNamingStrategy
 
 #thymeleaf
-spring.thymeleaf.mode=HTML5
+#spring.thymeleaf.mode=HTML5
+spring.thymeleaf.mode=LEGACYHTML5
 #Development only
 spring.thymeleaf.cache=false
-
 
 # DATA REST (RepositoryRestConfiguration)
 #spring.data.rest.base-uri=api
@@ -39,3 +38,24 @@ error.whitelabel.enabled=false
 
 # SPRING MVC
 spring.mvc.favicon.enabled=false
+
+#spring.h2.console.enabled=false
+#spring.datasource.url=jdbc:h2:mem:AZ;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.datasource.platform=mysql
+spring.datasource.sql-script-encoding=UTF-8
+#spring.datasource.url=jdbc:log4jdbc:oracle:thin:@localhost:1521:onj
+#spring.datasource.driver-class-name = net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+spring.datasource.url=jdbc:log4jdbc:mysql://htrucci.com:3306/test?createDatabaseIfNotExist=true
+spring.datasource.username=htrucci
+spring.datasource.password=hkb900
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+spring.jpa.show-sql=true
+
+spring.jpa.hibernate.ddl-auto=create
+logging.level.jpa=DEBUG
